# homework_10_2

./: pyproject.toml  readme.md
Home_work_poetry/: main.py  pyproject.toml  readme.md
Home_work_poetry/src/: masks.py  processing.py  widget.py
tests/: conftest.py  test_masks.py  test_processing.py  test_widget.py
